# experimentingWithHaskell

./: CHANGELOG.md  Experimenting.cabal  LICENSE
app/: Main.hs  New.hs
