cabal-version:      3.0
name:               Experimenting
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Silas de Jong
maintainer:         andorthekid@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall
executable Experimenting
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , containers
                    , text
                    , streaming
    hs-source-dirs:   app
    default-language: Haskell2010
